# xpkg

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
crates/xpkg/: Cargo.toml
crates/xpkg-core/: Cargo.toml
crates/xpkg-core/src/: config.rs  error.rs  lib.rs
crates/xpkg-core/src/metadata/: buildinfo.rs  install.rs  mod.rs  mtree.rs  pkginfo.rs
crates/xpkg-core/src/repo/: inspect.rs
crates/xpkg-core/src/source/: cache.rs  checksum.rs  download.rs  extract.rs  git.rs  mod.rs
crates/xpkg/src/: cli.rs  main.rs
docs/: SOURCES.md  realexample.md
etc/: xpkg.conf.example
packaging/xpkg/: XBUILD
